fixes missing anchor styles. adds class to anchor. updates spacing for group-title (#1186)

--- a/src/components/calcite-dropdown-item/calcite-dropdown-item.scss
+++ b/src/components/calcite-dropdown-item/calcite-dropdown-item.scss
@@ -73,9 +73,22 @@
 
 // when used as link move styling anchor
 :host([islink]) {
+  @apply p-0;
   & a {
     @include itemStyling;
   }
+}
+
+:host-context([scale="s"]) .dropdown-link {
+  @apply px-3 py-2;
+}
+
+:host-context([scale="m"]) .dropdown-link {
+  @apply px-4 py-3;
+}
+
+:host-context([scale="l"]) .dropdown-link {
+  @apply px-5 py-4;
 }
 
 :host(:hover),
